test/libsolidity/syntaxTests/nameAndTypeResolution/190_negative_integers_to_signed_out_of_bound.sol
contract test {
    int8 public i = -129;
}
// ----
// TypeError: (36-40): Type int_const -129 is not implicitly convertible to expected type int8.
